--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-       <div class="conatiner">
+    <div class="conatiner">
                     <div class="searchbox">
                          <input type="text" placeholder="Enter city Name" id="searchinput">
                         <i class="fa-solid fa-magnifying-glass" id="serchbox"></i>
@@ -44,6 +44,7 @@
                         </div>
                     </div>
               </div>
+            </div>
   <script src="script.js"></script>
 </body>
 </html>
