--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="conatiner">
+    <div class="container">
                     <div class="searchbox">
                          <input type="text" placeholder="Enter city Name" id="searchinput">
                         <i class="fa-solid fa-magnifying-glass" id="serchbox"></i>
